fixed some of the insane spacing in the my gallery view. Now you can see it, 3 up with dummy data

--- a/src/App.css
+++ b/src/App.css
@@ -136,10 +136,9 @@ p{
 
 
 .Gallery {
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+
   }
 
 .Item-title{
@@ -358,6 +357,17 @@ a:hover, a:visited{
 
 }
 
+.sign-out{
+  padding-top: 30px;
+  padding-bottom: 30px;
+  font-size: 17px;
+  font-weight: bold;
+  color: #A7182F;
+  text-align: center;
+  font-family: sans-serif;
+  text-decoration: none;
+}
+
 .App-link {
   color: #61dafb;
 }
@@ -488,8 +498,16 @@ a:hover, a:visited{
 }
 
 .Museum-header{
-  max-width: 600px;
   display:grid;
+  max-height: 250px;
+  width: 100%;
+  max-width: 1000px;
+  max-height: 30vmax;
+  position: relative;
+  object-fit: cover;
+  background-attachment: scroll;
+
+
 
 }
 
@@ -497,7 +515,9 @@ a:hover, a:visited{
   z-index: 0;
   background-clip: border-box;
   width: 100%;
+  height: 2550px;
   background-blend-mode: darken;
+
 }
 
 
@@ -506,6 +526,7 @@ a:hover, a:visited{
   z-index: 1;
   display: grid;
   width: 100%;
+  height: 250px;
   max-width: 600px;
 }
 
